# inline-syscall

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: direct_syscall.hpp
includes/: direct_syscall.hpp
src/: main.cpp
